Tiny changes to README and hello.R

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This is just a space to play around with git. It has no other value.
+This is just a space to play around with git. It has no other value..
